<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/cairo"
        android:text="@string/notifications"
        android:textColor="#DE000000"
        app:layout_constraintStart_toStartOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/textView7"
        style="@style/TextAppearance.AppCompat.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cairo"
        android:text="@string/off"
        android:textColor="#99000000"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView4"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/cairo"
        android:text="@string/info"
        android:textColor="@color/primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/cairo"
        android:text="@string/t_me_thechance101"
        android:textColor="#DE000000"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        style="@style/TextAppearance.AppCompat.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cairo"
        android:text="@string/invite_link"
        android:textColor="#99000000"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@null"
        android:contentDescription="@string/qr_reader"
        android:src="@drawable/qr_code_24"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:tint="@color/primary" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <View
        android:id="@+id/divider2"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintEnd_toStartOf="@+id/switch1"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/divider2"
        app:layout_constraintEnd_toEndOf="@+id/imageButton"
        app:layout_constraintTop_toTopOf="@+id/divider2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="194dp"
        app:layout_constraintTop_toBottomOf="@id/switch1" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/media"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/cairo_semibold"
        android:text="@string/files"
        android:textColor="#61000000"
        app:layout_constraintEnd_toStartOf="@+id/media3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/media2"
        app:layout_constraintTop_toTopOf="@+id/frameLayout" />

    <TextView
        android:id="@+id/media3"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/cairo_semibold"
        android:text="@string/links"
        android:textColor="#61000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/media"
        app:layout_constraintTop_toTopOf="@+id/frameLayout" />

    <TextView
        android:id="@+id/media2"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/cairo_semibold"
        android:text="@string/media"
        android:textColor="@color/primary"
        app:layout_constraintEnd_toStartOf="@+id/media"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/frameLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/frameLayout" />

    <View
        android:id="@+id/active"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/primary"
        app:layout_constraintEnd_toEndOf="@id/media2"
        app:layout_constraintStart_toStartOf="@id/media2"
        app:layout_constraintTop_toBottomOf="@id/media2" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="140dp"
        android:layout_height="160dp"
        android:scaleType="centerCrop"
        android:src="@drawable/photo"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="140dp"
        android:layout_height="160dp"
        android:scaleType="centerCrop"
        android:src="@drawable/photo"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="140dp"
        android:layout_height="160dp"
        android:scaleType="centerCrop"
        android:src="@drawable/photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="140dp"
        android:layout_height="160dp"
        android:scaleType="centerCrop"
        android:src="@drawable/photo"
        app:layout_constraintEnd_toStartOf="@+id/imageView31"
        app:layout_constraintStart_toEndOf="@+id/imageView21"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="140dp"
        android:layout_height="160dp"
        android:scaleType="centerCrop"
        android:src="@drawable/photo"
        app:layout_constraintEnd_toStartOf="@+id/imageView11"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView31"
        android:layout_width="140dp"
        android:layout_height="160dp"
        android:scaleType="centerCrop"
        android:src="@drawable/photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView11"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />


    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="140dp"
        android:layout_height="160dp"
        android:scaleType="centerCrop"
        android:src="@drawable/photo"
        app:layout_constraintEnd_toStartOf="@+id/imageView32"
        app:layout_constraintStart_toEndOf="@+id/imageView22"
        app:layout_constraintTop_toBottomOf="@+id/imageView11" />

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="140dp"
        android:layout_height="160dp"
        android:scaleType="centerCrop"
        android:src="@drawable/photo"
        app:layout_constraintEnd_toStartOf="@+id/imageView12"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView21" />

    <ImageView
        android:id="@+id/imageView32"
        android:layout_width="140dp"
        android:layout_height="160dp"
        android:scaleType="centerCrop"
        android:src="@drawable/photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView12"
        app:layout_constraintTop_toBottomOf="@+id/imageView31" />
</androidx.constraintlayout.widget.ConstraintLayout>